# Yolo_mark

./: .gitignore  CMakeLists.txt  linux_mark.sh
x64/Release/data/: obj.data  train.txt
